SDK-560: Done Signing Locally

--- a/project.yml
+++ b/project.yml
@@ -6,6 +6,8 @@ options:
   generateEmptyDirectories: true
   deploymentTarget: 
     iOS: "13.0"
+  postGenCommand: "pod install"
+
 
 targets:
   UniqueSDK:
